vistas para produccion corregidas v02

--- a/Aplicaciones/Emergencias/templates/vista_kilometraje.html
+++ b/Aplicaciones/Emergencias/templates/vista_kilometraje.html
@@ -44,6 +44,7 @@
       </div>
       {% endfor %} {% else %}
       <h1>No hay unidades para mostrar</h1>
+      {% endif %}
     </div>
     <div class="table-responsive">
       <table
